--- a/.travis.yml
+++ b/.travis.yml
@@ -17,9 +17,9 @@ script:
   # use --keepdb to avoid OperationalError during teardown in case any
   # db connections are still open from threads in TransactionTestCases
   # - docker exec cyphon_cyphon_1 python manage.py test --noinput --keepdb
-  - docker exec cyphon_cyphon_1 coverage run --source='.' --omit=*migrations*,*test* --branch manage.py test --noinput --keepdb
-  - docker exec cyphon_cyphon_1 coverage report > coverage.txt
+  - docker exec cyphon_cyphon_1 coverage run manage.py test --noinput --keepdb
 
 after_script:
-  - coveralls --data_file=./django/coverage.txt
+  - cd django
+  - coveralls
   - docker-compose down
