--- a/docker-compose.travis.yml
+++ b/docker-compose.travis.yml
@@ -35,20 +35,20 @@ services:
   #     - mongo
   #     - postgres
 
-  elasticsearch:
-    image: elasticsearch:latest
-    ports:
-      - "9200:9200"
+  # elasticsearch:
+  #   image: elasticsearch:latest
+  #   ports:
+  #     - "9200:9200"
 
   geoip:
     image: dunbar/geoip:latest
 
-  mongo:
-    image: mongo:latest
-    ports:
-      - "27017:27017"
+  # mongo:
+  #   image: mongo:latest
+  #   ports:
+  #     - "27017:27017"
 
-  postgres:
-    image: mdillon/postgis:latest
-    ports:
-      - "5432:5432"
+  # postgres:
+  #   image: mdillon/postgis:latest
+  #   ports:
+  #     - "5432:5432"
