--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ install:
   - pip install coveralls
 
 before_script:
+  - psql -U postgres -c "create extension postgis"
   - docker-compose -f docker-compose.travis.yml up --build -d 
   - sleep 15  # wait for PostgreSQl and Elasticsearch to start
 
