--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,12 @@ services:
   - docker
   - elasticsearch
   - mongodb
-  - postgresql
+
+addons:
+  postgresql: '9.6'
+    apt:
+      packages:
+        - postgresql-9.6-postgis-2.3
 
 python:
   - 3.6
