--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ services:
   - mongodb
 
 addons:
-  postgresql: '9.6'
+  postgresql: "9.6"
     apt:
       packages:
         - postgresql-9.6-postgis-2.3
