--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ script:
   # - docker exec cyphon_cyphon_1 python manage.py test --noinput --keepdb
   # - docker exec cyphon_cyphon_1 coverage run manage.py test --noinput --keepdb
   - cd django
-  - coverage run manage.py test --noinput --keepdb
+  - coverage run --source='.' --omit=*migrations*,*test* manage.py test --noinput --keepdb
 
 after_success:
   # - pwd
