--- a/.travis.yml
+++ b/.travis.yml
@@ -2,14 +2,17 @@ sudo: required
 
 language: python
 
+env:
+  - POSTGRES_PORT="5433"
+
 services:
   - docker
 
-addons:
-  postgresql: "9.6"
-  apt:
-    packages:
-      - postgresql-9.6-postgis-2.3
+# addons:
+#   postgresql: "9.6"
+#   apt:
+#     packages:
+#       - postgresql-9.6-postgis-2.3
 
 python:
   - 3.6
@@ -19,7 +22,7 @@ install:
   - pip install coveralls
 
 before_script:
-  - psql -U postgres -c "create extension postgis"
+  # - psql -U postgres -c "create extension postgis"
   - docker-compose -f docker-compose.travis.yml up --build -d 
   - sleep 15  # wait for PostgreSQl and Elasticsearch to start
 
