--- a/.travis.yml
+++ b/.travis.yml
@@ -2,17 +2,14 @@ sudo: required
 
 language: python
 
-env:
-  - POSTGRES_PORT="5433"
-
 services:
   - docker
 
-# addons:
-#   postgresql: "9.6"
-#   apt:
-#     packages:
-#       - postgresql-9.6-postgis-2.3
+addons:
+  postgresql: "9.6"
+  apt:
+    packages:
+      - postgresql-9.6-postgis-2.3
 
 python:
   - 3.6
@@ -22,7 +19,7 @@ install:
   - pip install coveralls
 
 before_script:
-  # - psql -U postgres -c "create extension postgis"
+  - psql -U postgres -c "create extension postgis"
   - docker-compose -f docker-compose.travis.yml up --build -d 
   - sleep 15  # wait for PostgreSQl and Elasticsearch to start
 
@@ -30,7 +27,6 @@ script:
   # use --keepdb to avoid OperationalError during teardown in case any
   # db connections are still open from threads in TransactionTestCases
   # - docker exec cyphon_cyphon_1 python manage.py test --noinput --keepdb
-  # - docker exec cyphon_cyphon_1 coverage run manage.py test --noinput --keepdb
   - cd django
   - coverage run --source='.' --omit=*migrations*,*test* manage.py test --noinput --keepdb
 
