--- a/.travis.yml
+++ b/.travis.yml
@@ -27,11 +27,12 @@ before_script:
   - sleep 15  # wait for PostgreSQl and Elasticsearch to start
 
 script:
+
+  # copy GeoLite database to shared volume
+  - docker exec cyphon_geoip_1 cp /usr/share/GeoIP/GeoLite2-City.mmdb /usr/share/cyphondock
+
   # use --keepdb to avoid OperationalError during teardown in case any
   # db connections are still open from threads in TransactionTestCases
-  # - docker exec cyphon_cyphon_1 python manage.py test --noinput --keepdb
-  - docker exec cyphon_geoip_1 cp /usr/share/GeoIP/GeoLite2-City.mmdb /usr/share/cyphondock
-  - ls GeoIP
   - cd django
   - coverage run --source='.' --omit=*migrations*,*test* manage.py test --noinput --keepdb
 
