--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ python:
 install:
   - pip install -r requirements.txt
   - pip install coveralls
+  - pip install codacy-coverage
 
 before_script:
   - psql -U postgres -c "create extension postgis"
@@ -39,6 +40,9 @@ script:
 after_success:
   - coverage
   - coveralls
+  - coverage xml
+  - python-codacy-coverage -r coverage.xml
 
 after_script:
   - docker-compose down
+
