--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ amqp==2.1.4
 anyjson==0.3.3
 beautifulsoup4==4.5.3
 billiard==3.5.0.2
-bleach>=1.0.0,<2.0.0
+bleach==2.0.0
 celery==4.0.2
 cryptography==1.8.1
 Django==1.10.6
