--- a/requirements.txt
+++ b/requirements.txt
@@ -40,6 +40,7 @@ pytz==2016.10
 requests==2.13.0
 requests-oauthlib==0.8.0
 requests-toolbelt==0.7.1
+sauceclient==0.2.1
 selenium==3.3.1
 six==1.10.0
 testfixtures==4.13.5
