--- a/requirements.txt
+++ b/requirements.txt
@@ -41,7 +41,7 @@ requests==2.13.0
 requests-oauthlib==0.8.0
 requests-toolbelt==0.7.1
 sauceclient==0.2.1
-selenium==2.53.0
+selenium>=2.0.0,<3.0.0
 six==1.10.0
 testfixtures==4.13.5
 tlslite==0.4.9
