--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ sudo: required
 language: python
 
 env:
-  - GEOIP_PATH=/home/travis/build/dunbarcyber/cyphon/GeoIP/GeoLite2-City.mmdb
+  - GEOIP_PATH=/home/travis/build/dunbarcyber/cyphon/GeoIP/
 
 services:
   - docker
