--- a/docker-compose.travis.yml
+++ b/docker-compose.travis.yml
@@ -21,7 +21,7 @@ version: '2'
 services:
 
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:latest
+    image: docker.elastic.co/elasticsearch/elasticsearch:5.4.0
     ports:
       - "9200:9200"
 
