add elasticsearch environment variables

--- a/docker-compose.travis.yml
+++ b/docker-compose.travis.yml
@@ -22,6 +22,10 @@ services:
 
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:5.4.0
+    environment:
+      - http.host=0.0.0.0
+      - transport.host=127.0.0.1
+      - xpack.security.enabled=0
     ports:
       - "9200:9200"
 
