--- a/.travis.yml
+++ b/.travis.yml
@@ -39,10 +39,11 @@ install:
   - pip install codecov
   - pip install coveralls
   - pip install codacy-coverage
+  - python setup.py install
 
 before_script:
   - psql -U postgres -c "create extension postgis"
-  - docker-compose -f docker-compose.travis.yml up --build -d 
+  - docker-compose -f docker-compose.travis.yml up --build -d
   - sleep 15  # wait for PostgreSQl and Elasticsearch to start
 
 script:
