updated Alpine-based Dockerfile, and added su-exec
* moved Alpine-based Dockerfile to alpine/ directory, default Dockerfile
  is from master
* added su-exec to dependencies and updated all entrypoint scripts to
  use it to drop privileges to the cyphon user
* potentially fixed Alpine-based image, builds GDAL 2.2.0 from scratch
  due to the fact that the version in the Alpine edge testing repo is
  2.1, and the only version of the Python SWIG interface on PyPI is
  2.2.

--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ djangorestframework-jwt==1.10.0
 docutils==0.13.1
 drfdocs==0.0.11
 elasticsearch==5.4.0
+GDAL==2.2.0
 geoip2==2.5.0
 geopy==1.11.0
 gunicorn==19.7.1
