--- a/.travis.yml
+++ b/.travis.yml
@@ -32,13 +32,17 @@ addons:
   sauce_connect: true
 
 python:
-  - 3.6
+  - "2.7"
+  - "3.4"
+  - "3.5"
+  - "3.6"
 
 install:
   - pip install -r requirements.txt
+  - pip install codacy-coverage
   - pip install codecov
   - pip install coveralls
-  - pip install codacy-coverage
+  - pip install tox-travis
 
 before_script:
   - psql -U postgres -c "create extension postgis"
