--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,16 @@
 [tox]
-envlist = py{27,34,35,36},py36-{functional,lint}
+envlist = cov-init,py{27,34,35,36},py36-{functional,lint},cov-report
 
 [testenv]
 usedevelop = true
 changedir = cyphon
 commands =
   rm -f __init__.py
+  # use --keepdb to avoid OperationalError during teardown in case any
+  # db connections are still open from threads in TransactionTestCases
   coverage run --source='.' --omit=*migrations*,*test* manage.py test --noinput --keepdb
 basepython =
+  cov-{init,report}: python3.6
   py27: python2.7
   py34: python3.4
   py35: python3.5
@@ -16,9 +19,21 @@ deps =
   codecov
   -rrequirements.txt
 setenv =
-  COVERAGE_FILE = coverage.{envname}.xml
+  COVERAGE_FILE = .coverage.{envname}
 whitelist_externals = rm
 alwayscopy = true
+
+[testenv:cov-init]
+commands = coverage erase
+setenv =
+  COVERAGE_FILE = .coverage
+
+[testenv:cov-report]
+commands =
+  coverage combine
+  coverage report -m
+setenv =
+  COVERAGE_FILE = .coverage
 
 [testenv:py36-functional]
 changedir = cyphon
@@ -33,4 +48,4 @@ python =
   2.7: py27
   3.4: py34
   3.5: py35
-  3.6: py36, py36-functional, py36-lint
+  3.6: cov-init, cov-report, py36, py36-functional, py36-lint
