added mock backport for Python <3.3, and fixed various unit tests
* the QueryFieldset class now uses an OrderedDict to produce a string
  value
* removed 2.7 from tox for now
* updated all test files to fallback to mock backport for Python <3.3

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = cov-init,py{27,34,35,36},py36-{functional,lint},cov-report
+envlist = cov-init,py{34,35,36},py36-{functional,lint},cov-report
 
 [testenv]
 usedevelop = true
@@ -17,9 +17,11 @@ basepython =
   py36: python3.6
 deps =
   codecov
+  mock
   -rrequirements.txt
 setenv =
   COVERAGE_FILE = .coverage.{envname}
+  FUNCTIONAL_TESTS_ENABLED = false
 whitelist_externals = rm
 alwayscopy = true
 
@@ -42,10 +44,12 @@ commands =
   coverage run --source='.' manage.py test -p functionl_tests.py --noinput --keepdb
 whitelist_externals = rm
 alwayscopy = true
+setenv =
+  FUNCTIONAL_TESTS_ENABLED = true
 
 [travis]
 python =
-  2.7: py27
+  ; 2.7: py27
   3.4: py34
   3.5: py35
   3.6: cov-init, cov-report, py36, py36-functional, py36-lint
