--- a/tox.ini
+++ b/tox.ini
@@ -11,7 +11,7 @@ commands =
   coverage run --source='.' --omit=*migrations*,*test* manage.py test --noinput --keepdb
 basepython =
   cov-{init,report}: python3.6
-  py27: python2.7
+  ; py27: python2.7
   py34: python3.4
   py35: python3.5
   py36: python3.6
