actually removed 2.7 from Travis, attempting to fix coverage collection

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = cov-init,py{34,35,36},py36-{functional,lint},cov-report
+envlist = cov-init, py{34,35,36}, py36-{functional,lint}, cov-report
 
 [testenv]
 usedevelop = true
@@ -48,6 +48,6 @@ setenv =
 
 [travis]
 python =
-  3.4: py34
+  3.4: cov-init, py34
   3.5: py35
-  3.6: cov-init, cov-report, py36, py36-functional, py36-lint
+  3.6: py36, py36-functional, py36-lint, cov-report
