restoring basepython entries for cov-init and cov-report, but hopefully correct this time

--- a/tox.ini
+++ b/tox.ini
@@ -10,9 +10,11 @@ commands =
   # db connections are still open from threads in TransactionTestCases
   coverage run --source='.' --omit=*migrations*,*test* manage.py test --noinput --keepdb
 basepython =
+  cov-init: python3.4
   py34: python3.4
   py35: python3.5
   py36: python3.6
+  cov-report: python3.6
 deps =
   codecov
   mock
