move coverage publishing to the cov-report tox environment

--- a/tox.ini
+++ b/tox.ini
@@ -27,21 +27,21 @@ alwayscopy = true
 
 [testenv:cov-init]
 commands = coverage erase
-setenv =
-  COVERAGE_FILE = .coverage
 
 [testenv:cov-report]
 commands =
   coverage combine
   coverage report -m
-setenv =
-  COVERAGE_FILE = .coverage
+  coveralls
+  codecov -f .coverage
+  python-codacy-coverage -r .coverage
+passenv = TRAVIS TRAVIS_JOB_ID TRAVIS_BRANCH
 
 [testenv:py36-functional]
 changedir = cyphon
 commands =
   rm -f __init__.py
-  coverage run --source='.' manage.py test -p functionl_tests.py --noinput --keepdb
+  manage.py test -p functionl_tests.py --noinput --keepdb
 whitelist_externals = rm
 alwayscopy = true
 setenv =
