fixed command to run functional tests

--- a/tox.ini
+++ b/tox.ini
@@ -41,7 +41,7 @@ passenv = TRAVIS TRAVIS_JOB_ID TRAVIS_BRANCH
 changedir = cyphon
 commands =
   rm -f __init__.py
-  manage.py test -p functionl_tests.py --noinput --keepdb
+  python manage.py test -p functionl_tests.py --noinput --keepdb
 whitelist_externals = rm
 alwayscopy = true
 setenv =
