add GEOIP_PATH to passenv in tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -24,6 +24,7 @@ setenv =
   FUNCTIONAL_TESTS_ENABLED = false
 whitelist_externals = rm
 alwayscopy = true
+passenv = GEOIP_PATH
 
 [testenv:cov-init]
 commands = coverage erase
