fixed coverage to work with alwayscopy

--- a/tox.ini
+++ b/tox.ini
@@ -20,7 +20,7 @@ deps =
   mock
   -rrequirements.txt
 setenv =
-  COVERAGE_FILE = .coverage.{envname}
+  COVERAGE_FILE = {toxinidir}/.coverage.{envname}
   FUNCTIONAL_TESTS_ENABLED = false
 whitelist_externals = rm
 alwayscopy = true
@@ -28,15 +28,22 @@ passenv = GEOIP_PATH
 
 [testenv:cov-init]
 commands = coverage erase
+deps = coverage
+setenv =
+  COVERAGE_FILE = {toxinidir}/.coverage
 
 [testenv:cov-report]
 commands =
   coverage combine
   coverage report -m
-  coveralls
-  codecov -f .coverage
-  python-codacy-coverage -r .coverage
+
+setenv =
+  COVERAGE_FILE = {toxinidir}/.coverage
 passenv = TRAVIS TRAVIS_JOB_ID TRAVIS_BRANCH
+deps =
+  codacy-coverage
+  codecov
+  coveralls
 
 [testenv:py36-functional]
 changedir = cyphon
