added code coverage service commands back, and added a line to debug GEOIP_PATH

--- a/tox.ini
+++ b/tox.ini
@@ -36,7 +36,9 @@ setenv =
 commands =
   coverage combine
   coverage report -m
-
+  coveralls
+  codecov -f .coverage
+  python-codacy-coverage -r .coverage
 setenv =
   COVERAGE_FILE = {toxinidir}/.coverage
 passenv = TRAVIS TRAVIS_JOB_ID TRAVIS_BRANCH
