added more variables to passenv, and debugging GeoIP stuff

--- a/tox.ini
+++ b/tox.ini
@@ -41,7 +41,7 @@ commands =
   python-codacy-coverage -r .coverage
 setenv =
   COVERAGE_FILE = {toxinidir}/.coverage
-passenv = TRAVIS TRAVIS_JOB_ID TRAVIS_BRANCH
+passenv = CODACY_PROJECT_TOKEN TRAVIS TRAVIS_JOB_ID TRAVIS_BRANCH
 deps =
   codacy-coverage
   codecov
@@ -56,6 +56,7 @@ whitelist_externals = rm
 alwayscopy = true
 setenv =
   FUNCTIONAL_TESTS_ENABLED = true
+passenv = FUNCTIONAL_* SAUCE_*
 
 [travis]
 python =
