--- a/.travis.yml
+++ b/.travis.yml
@@ -47,6 +47,7 @@ before_script:
 script:
   # copy GeoLite database to shared volume
   - docker exec cyphon_geoip_1 cp /usr/share/GeoIP/GeoLite2-City.mmdb /usr/share/cyphon
+  - ls -l /home/travis/build/dunbarcyber/cyphon/GeoIP/
   - tox
 
 after_script:
