increased tox verosity, and changed codecov and codacy commands to point to toxinidir/.coverage

--- a/tox.ini
+++ b/tox.ini
@@ -37,8 +37,8 @@ commands =
   coverage combine
   coverage report -m
   coveralls
-  codecov -f .coverage
-  python-codacy-coverage -r .coverage
+  codecov -f {toxinidir}/.coverage
+  python-codacy-coverage -r {toxinidir}/.coverage
 setenv =
   COVERAGE_FILE = {toxinidir}/.coverage
 passenv = CODACY_PROJECT_TOKEN TRAVIS TRAVIS_JOB_ID TRAVIS_BRANCH
