--- a/.travis.yml
+++ b/.travis.yml
@@ -48,7 +48,7 @@ script:
   # copy GeoLite database to shared volume
   - docker exec cyphon_geoip_1 cp /usr/share/GeoIP/GeoLite2-City.mmdb /usr/share/cyphon
   - ls -l /home/travis/build/dunbarcyber/cyphon/GeoIP/
-  - tox
+  - tox -v
 
 after_script:
   - cd ../
