restored coverage.xml generation, and attempting to fix GeoIP yet again by docker cp instead of docker exec

--- a/tox.ini
+++ b/tox.ini
@@ -36,9 +36,10 @@ setenv =
 commands =
   coverage combine
   coverage report -m
+  coverage xml -o {toxinidir}/coverage.xml
   coveralls
   codecov -f {toxinidir}/.coverage
-  python-codacy-coverage -r {toxinidir}/.coverage
+  python-codacy-coverage -r {toxinidir}/coverage.xml
 setenv =
   COVERAGE_FILE = {toxinidir}/.coverage
 passenv = CODACY_PROJECT_TOKEN TRAVIS TRAVIS_JOB_ID TRAVIS_BRANCH
