--- a/.travis.yml
+++ b/.travis.yml
@@ -46,7 +46,7 @@ before_script:
 
 script:
   # copy GeoLite database to shared volume
-  - docker exec cyphon_geoip_1 cp /usr/share/GeoIP/GeoLite2-City.mmdb /usr/share/cyphon
+  - docker cp cyphon_geoip_1:/usr/share/GeoIP/GeoLite2-City.mmdb $GEOIP_PATH
   - ls -l /home/travis/build/dunbarcyber/cyphon/GeoIP/
   - tox -v
 
