added CI var to passenv

--- a/tox.ini
+++ b/tox.ini
@@ -42,7 +42,7 @@ commands =
   python-codacy-coverage -r {toxinidir}/coverage.xml
 setenv =
   COVERAGE_FILE = {toxinidir}/.coverage
-passenv = CODACY_PROJECT_TOKEN TRAVIS TRAVIS_JOB_ID TRAVIS_BRANCH
+passenv = CI CODACY_PROJECT_TOKEN TRAVIS*
 deps =
   codacy-coverage
   codecov
