run functional tests under coverage run again

--- a/tox.ini
+++ b/tox.ini
@@ -52,10 +52,11 @@ deps =
 changedir = cyphon
 commands =
   rm -f __init__.py
-  python manage.py test -p functionl_tests.py --noinput --keepdb
+  coverage run --source='.' python manage.py test -p functionl_tests.py --noinput --keepdb
 whitelist_externals = rm
 alwayscopy = true
 setenv =
+  COVERAGE_FILE = {toxinidir}/.coverage.{envname}
   FUNCTIONAL_TESTS_ENABLED = true
 passenv = FUNCTIONAL_* SAUCE_*
 
