--- a/tox.ini
+++ b/tox.ini
@@ -52,7 +52,7 @@ deps =
 changedir = cyphon
 commands =
   rm -f __init__.py
-  coverage run --source='.' manage.py test -p functionl_tests.py --noinput --keepdb
+  coverage run --source='.' manage.py test -p functional_tests.py --noinput --keepdb
 whitelist_externals = rm
 alwayscopy = true
 setenv =
