combining py36 and py36-functional, and not running coverage run for functional tests

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = cov-init, py{34,35,36}, py36-{functional,lint}, cov-report
+envlist = cov-init, py{34,35,36}, py36-lint, cov-report
 
 [testenv]
 usedevelop = true
@@ -48,11 +48,11 @@ deps =
   codecov
   coveralls
 
-[testenv:py36-functional]
+[testenv:py36]
 changedir = cyphon
 commands =
   rm -f __init__.py
-  coverage run --source='.' manage.py test -p functional_tests.py --noinput --keepdb
+  coverage run --source='.' manage.py test --noinput --keepdb
 whitelist_externals = rm
 alwayscopy = true
 setenv =
@@ -64,4 +64,4 @@ passenv = FUNCTIONAL_* SAUCE_*
 python =
   3.4: cov-init, py34
   3.5: py35
-  3.6: py36, py36-functional, py36-lint, cov-report
+  3.6: py36, py36-lint, cov-report
