possibly fixed coverage for functional tests?

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = cov-init, py{34,35,36}, py36-lint, cov-report
+envlist = cov-init, py{34,35,36}, py36-{functional,lint}, cov-report
 
 [testenv]
 usedevelop = true
@@ -48,20 +48,20 @@ deps =
   codecov
   coveralls
 
-[testenv:py36]
+[testenv:py36-functional]
 changedir = cyphon
 commands =
   rm -f __init__.py
-  coverage run --source='.' manage.py test --noinput --keepdb
+  coverage run --source='.' manage.py test -p test_functional.py --noinput --keepdb
 whitelist_externals = rm
 alwayscopy = true
 setenv =
   COVERAGE_FILE = {toxinidir}/.coverage.{envname}
   FUNCTIONAL_TESTS_ENABLED = true
-passenv = FUNCTIONAL_* SAUCE_*
+passenv = DISPLAY FUNCTIONAL_* SAUCE_*
 
 [travis]
 python =
   3.4: cov-init, py34
   3.5: py35
-  3.6: py36, py36-lint, cov-report
+  3.6: py36, py36-functional, py36-lint, cov-report
