--- a/tox.ini
+++ b/tox.ini
@@ -58,7 +58,7 @@ alwayscopy = true
 setenv =
   COVERAGE_FILE = {toxinidir}/.coverage.{envname}
   FUNCTIONAL_TESTS_ENABLED = true
-passenv = DISPLAY FUNCTIONAL_* SAUCE_*
+passenv = DISPLAY FUNCTIONAL_* SAUCE_* TRAVIS_*
 
 [travis]
 python =
