change name of functional test coverage file in attempt to fix nuked coverage stats

--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ commands =
   rm -f __init__.py
   # use --keepdb to avoid OperationalError during teardown in case any
   # db connections are still open from threads in TransactionTestCases
-  coverage run --source='.' --omit=*migrations*,*test* manage.py test --noinput --keepdb
+  coverage run --source='.' --omit=*migrations*,*test*,*functional* manage.py test --noinput --keepdb
 basepython =
   cov-init: python3.4
   py34: python3.4
@@ -56,7 +56,7 @@ commands =
 whitelist_externals = rm
 alwayscopy = true
 setenv =
-  COVERAGE_FILE = {toxinidir}/.coverage.{envname}
+  COVERAGE_FILE = {toxinidir}/.coverage.functional.{envname}
   FUNCTIONAL_TESTS_ENABLED = true
 passenv = DISPLAY FUNCTIONAL_* SAUCE_* TRAVIS_*
 
