attempting to use append mode when running coverage

--- a/tox.ini
+++ b/tox.ini
@@ -34,8 +34,8 @@ setenv =
 
 [testenv:cov-report]
 commands =
-  coverage combine
-  coverage report -m
+  coverage combine -a
+  coverage report -m --skip-covered
   coverage xml -o {toxinidir}/coverage.xml
   coveralls
   codecov -f {toxinidir}/.coverage
@@ -52,11 +52,11 @@ deps =
 changedir = cyphon
 commands =
   rm -f __init__.py
-  coverage run --source='.' manage.py test -p test_functional.py --noinput --keepdb
+  coverage run -a --source='.' manage.py test -p test_functional.py --noinput --keepdb
 whitelist_externals = rm
 alwayscopy = true
 setenv =
-  COVERAGE_FILE = {toxinidir}/.coverage.functional.{envname}
+  COVERAGE_FILE = {toxinidir}/.coverage.{envname}
   FUNCTIONAL_TESTS_ENABLED = true
 passenv = DISPLAY FUNCTIONAL_* SAUCE_* TRAVIS_*
 
