--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = cov-init, py{34,35,36}, py36-{functional,lint}, cov-report
+envlist = cov-init, py{34,35,36}, py36-functional, cov-report
 
 [testenv]
 usedevelop = true
@@ -64,4 +64,4 @@ passenv = DISPLAY FUNCTIONAL_* SAUCE_* TRAVIS_*
 python =
   3.4: cov-init, py34
   3.5: py35
-  3.6: py36, py36-functional, py36-lint, cov-report
+  3.6: py36, py36-functional, cov-report
