pass --rcfile to coverage to hopefully ensure it can find coveragerc

--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ commands =
   rm -f __init__.py
   # use --keepdb to avoid OperationalError during teardown in case any
   # db connections are still open from threads in TransactionTestCases
-  coverage run --source='.' --omit=*migrations*,*test*,*functional* manage.py test --noinput --keepdb
+  coverage run --rcfile={toxinidir}/.coveragerc manage.py test --noinput --keepdb
 basepython =
   cov-init: python3.4
   py34: python3.4
@@ -34,7 +34,7 @@ setenv =
 
 [testenv:cov-report]
 commands =
-  coverage combine -a
+  coverage combine
   coverage report -m --skip-covered
   coverage xml -o {toxinidir}/coverage.xml
   coveralls
@@ -52,7 +52,7 @@ deps =
 changedir = cyphon
 commands =
   rm -f __init__.py
-  coverage run -a --source='.' manage.py test -p test_functional.py --noinput --keepdb
+  coverage run --rcfile={toxinidir}/.coveragerc manage.py test -p test_functional.py --noinput --keepdb
 whitelist_externals = rm
 alwayscopy = true
 setenv =
