--- a/.coveragerc
+++ b/.coveragerc
@@ -2,12 +2,17 @@
 omit =
   */tests/*
   */migrations/*
+source =
+  cyphon
 
 [report]
 exclude_lines =
     def __repr__
     raise NotImplementedError
     pass
+omit =
+  */tests/*
+  */migrations/*
 
 [paths]
 source =
