--- a/tox.ini
+++ b/tox.ini
@@ -35,7 +35,7 @@ setenv =
 [testenv:cov-report]
 commands =
   coverage combine
-  coverage report -m --skip-covered
+  coverage report -m
   coverage xml -o {toxinidir}/coverage.xml
   coveralls
   codecov -f {toxinidir}/.coverage
