--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,8 @@ billiard==3.5.0.2
 bleach==2.0.0
 celery==4.0.2
 cryptography==1.9
-Django==1.10.7
-django-autocomplete-light>=2.0.0,<3.0.0
+Django==1.11.2
+django-autocomplete-light==2.3.3  # pyup: >=2.0.0,<3.0.0
 django-constance==2.0.0
 django-cors-headers==2.1.0
 django-extensions==1.7.9
