fixed test_transaction.RequireLockTest, and sneaked in an update to tox.ini to pass posargs

--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ commands =
   rm -f __init__.py
   # use --keepdb to avoid OperationalError during teardown in case any
   # db connections are still open from threads in TransactionTestCases
-  coverage run --rcfile={toxinidir}/.coveragerc manage.py test --noinput --keepdb
+  coverage run --rcfile={toxinidir}/.coveragerc manage.py test {posargs} --noinput --keepdb
 basepython =
   cov-init: python3.4
   py34: python3.4
