more workarounds for forms that use DAL, to forcibly use the patched ChoiceWidget

--- a/tox.ini
+++ b/tox.ini
@@ -52,7 +52,7 @@ deps =
 changedir = cyphon
 commands =
   rm -f __init__.py
-  coverage run --rcfile={toxinidir}/.coveragerc manage.py test -p test_functional.py --noinput --keepdb
+  coverage run --rcfile={toxinidir}/.coveragerc manage.py test -p test_functional.py {posargs} --noinput --keepdb
 whitelist_externals = rm
 alwayscopy = true
 setenv =
