--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = cov-init, py{34,35,36}, py36-functional, cov-report
+envlist = cov-init, py27-docs, py{34,35,36}, py36-functional, cov-report
 
 [testenv]
 usedevelop = true
@@ -11,6 +11,7 @@ commands =
   coverage run --rcfile={toxinidir}/.coveragerc manage.py test {posargs} --noinput --keepdb
 basepython =
   cov-init: python3.4
+  py27-docs: python2.7
   py34: python3.4
   py35: python3.5
   py36: python3.6
@@ -48,6 +49,11 @@ deps =
   codecov
   coveralls
 
+[testenv:py27-docs]
+commands =
+  pip install sphinx sphinx_rtd_theme
+  sphinx-build -b html -d {envtmpdir}/doctrees {toxinidir}/docs/source {envtmpdir}/html
+
 [testenv:py36-functional]
 changedir = cyphon
 commands =
@@ -62,6 +68,7 @@ passenv = DISPLAY FUNCTIONAL_* SAUCE_* TRAVIS_*
 
 [travis]
 python =
+  2.7: py27-docs
   3.4: cov-init, py34
   3.5: py35
   3.6: py36, py36-functional, cov-report
