try setting FUNCTIONAL_TESTS_DRIVER in tox.ini for functional tests

--- a/tox.ini
+++ b/tox.ini
@@ -63,6 +63,7 @@ whitelist_externals = rm
 alwayscopy = true
 setenv =
   COVERAGE_FILE = {toxinidir}/.coverage.{envname}
+  FUNCTIONAL_TESTS_DRIVER = SAUCELABS
   FUNCTIONAL_TESTS_ENABLED = true
 passenv = DISPLAY FUNCTIONAL_* SAUCE_* TRAVIS_*
 
