--- a/tox.ini
+++ b/tox.ini
@@ -64,8 +64,7 @@ alwayscopy = true
 setenv =
   COVERAGE_FILE = {toxinidir}/.coverage.{envname}
   FUNCTIONAL_TESTS_DRIVER = SAUCELABS
-  FUNCTIONAL_TESTS_ENABLED = true
-passenv = DISPLAY FUNCTIONAL_* SAUCE_* TRAVIS_*
+passenv = DISPLAY SAUCE_* TRAVIS_*
 
 [travis]
 python =
