accidentally removed FUNCTIONAL_TESTS_ENABLED

--- a/tox.ini
+++ b/tox.ini
@@ -64,6 +64,7 @@ alwayscopy = true
 setenv =
   COVERAGE_FILE = {toxinidir}/.coverage.{envname}
   FUNCTIONAL_TESTS_DRIVER = SAUCELABS
+  FUNCTIONAL_TESTS_ENABLED = true
 passenv = DISPLAY SAUCE_* TRAVIS_*
 
 [travis]
