Include default configuration and pull secrets from SSM (#134)
* added support for fetching configuration and secrets from SSM

* added pragma nocover to coveragerc, and ignoring code coverage for EC2 detection in conf.py

* ignore settings directory when testing and reporting

* added django-s3-storage

--- a/.coveragerc
+++ b/.coveragerc
@@ -2,17 +2,20 @@
 omit =
   */tests/*
   */migrations/*
+  */settings/*
 source =
   .
 
 [report]
 exclude_lines =
-    def __repr__
-    raise NotImplementedError
-    pass
+  def __repr__
+  pass
+  pragma: no cover
+  raise NotImplementedError
 omit =
   */tests/*
   */migrations/*
+  */settings/*
 
 [paths]
 source =
