--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,9 @@ backoff==1.4.3
 beautifulsoup4==4.6.0
 billiard==3.5.0.2
 bleach==2.0.0
+boto3==1.4.4
 celery==4.0.2
 cryptography==1.9
-Django==1.11.3
 django-autocomplete-light==2.3.3  # pyup: >=2.0.0,<3.0.0
 django-constance==2.0.0
 django-cors-headers==2.1.0
@@ -15,10 +15,13 @@ django-filter==1.0.4
 django-grappelli==2.10.1
 django-mailbox==4.5.4
 django-picklefield==1.0.0
-djangorestframework==3.6.3
+django-s3-storage==0.11.3
+Django==1.11.3
 djangorestframework-jwt==1.11.0
+djangorestframework==3.6.3
 docutils==0.13.1
 drfdocs==0.0.11
+ec2-metadata==1.0.0
 elasticsearch==5.4.0
 feedparser==5.2.1
 geoip2==2.5.0
@@ -39,9 +42,9 @@ PyJWT==1.5.2
 pymongo==3.4.0
 python-dateutil==2.6.1
 pytz==2017.2
-requests==2.18.1
 requests-oauthlib==0.8.0
 requests-toolbelt==0.8.0
+requests==2.18.1
 sauceclient==1.0.0
 selenium==3.4.3
 six==1.10.0
