--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ boto3==1.4.6
 celery==4.1.0
 cryptography==2.0.3
 django-autocomplete-light==2.3.3  # pyup: >=2.0.0,<3.0.0
+django-ckeditor==5.3.0
 django-constance==2.0.0
 django-cors-headers==2.1.0
 django-extensions==1.8.1
