--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,7 @@ djangorestframework==3.7.7
 docutils==0.14
 drfdocs==0.0.11
 ec2-metadata==1.6.0
-elasticsearch==5.4.0
+elasticsearch==5.5.2    # pyup: >=5.0.0,<6.0.0
 feedparser==5.2.1
 geoip2==2.7.0
 geopy==1.11.0
