Hotfix/sphinx py3 (#396)
* fix project directory and file names in MANIFEST.in

* remove httmock from INSTALLED_APPS

* set mock.__name__ to mod_name in docs config

* remove mixin from LocationManager

* update Cyphon version to 1.6.1 in docs

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,7 +1,7 @@
-include README.txt
-include LICENSE
+include README.rst
+include LICENSE.txt
 include MANIFEST.in
 include requirements.txt
 recursive-include docs *
-recursive-include django *
-recursive-exclude django *.pyc
+recursive-include cyphon *
+recursive-exclude cyphon *.pyc
